versioned_docs/version-5.1/client-api/commands/documents/get.mdx
---
title: "Commands: Documents: Get"
hide_table_of_contents: true
sidebar_label: Get Documents
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Commands: Documents: Get
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">


There are a few methods that allow you to retrieve documents from a database:   

- [Get single document](../../../client-api/commands/documents/get.mdx#get-single-document)   
- [Get multiple documents](../../../client-api/commands/documents/get.mdx#get-multiple-documents)   
- [Get paged documents](../../../client-api/commands/documents/get.mdx#get-paged-documents)   
- [Get documents by starts with](../../../client-api/commands/documents/get.mdx#get-by-starts-with)  

## Get single document

**GetDocumentsCommand** can be used to retrieve a single document

### Syntax

<TabItem value="get_interface_single" label="get_interface_single">
<CodeBlock language="csharp">
{`public GetDocumentsCommand(string id, string[] includes, bool metadataOnly)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **id** string | ID of the documents to get |
| **includes** | string[] | Related documents to fetch along with the document |
| **metadataOnly** | boolean | Whether to fetch the whole document or just the metadata. |

### Example

<TabItem value="get_sample_single" label="get_sample_single">
<CodeBlock language="csharp">
{`var command = new GetDocumentsCommand("orders/1-A", null, false);
session.Advanced.RequestExecutor.Execute(command, session.Advanced.Context);
var order = (BlittableJsonReaderObject)command.Result.Results[0];
`}
</CodeBlock>
</TabItem>



## Get multiple documents

**GetDocumentsCommand** can also be used to retrieve a list of documents.

### Syntax

<TabItem value="get_interface_multiple" label="get_interface_multiple">
<CodeBlock language="csharp">
{`public GetDocumentsCommand(string[] ids, string[] includes, bool metadataOnly)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **ids** string[] | IDs of the documents to get |
| **includes** | string | Related documents to fetch along with the documents |
| **metadataOnly** | boolean | Whether to fetch whole documents or just the metadata |

### Example I

<TabItem value="get_sample_multiple" label="get_sample_multiple">
<CodeBlock language="csharp">
{`var command = new GetDocumentsCommand(new[] \{ "orders/1-A", "employees/3-A" \}, null, false);
session.Advanced.RequestExecutor.Execute(command, session.Advanced.Context);
var order = (BlittableJsonReaderObject)command.Result.Results[0];
var employee = (BlittableJsonReaderObject)command.Result.Results[1];
`}
</CodeBlock>
</TabItem>

### Example II - Using Includes

<TabItem value="get_sample_includes" label="get_sample_includes">
<CodeBlock language="csharp">
{`// Fetch employees/5-A and his boss.
var command = new GetDocumentsCommand("employees/5-A", includes: new[] \{ "ReportsTo" \}, metadataOnly: false);
session.Advanced.RequestExecutor.Execute(command, session.Advanced.Context);
var employee = (BlittableJsonReaderObject)command.Result.Results[0];
if (employee.TryGet<string>("ReportsTo", out var bossId))
\{
    var boss = command.Result.Includes[bossId];
\}
`}
</CodeBlock>
</TabItem>

### Example III - Missing Documents

<TabItem value="get_sample_missing" label="get_sample_missing">
<CodeBlock language="csharp">
{`// Assuming that products/9999-A doesn't exist.
var command = new GetDocumentsCommand(new[] \{ "products/1-A", "products/9999-A", "products/3-A" \}, null, false);
session.Advanced.RequestExecutor.Execute(command, session.Advanced.Context);
var products = command.Result.Results; // products/1-A, null, products/3-A
`}
</CodeBlock>
</TabItem>



## Get paged documents

**GetDocumentsCommand** can also be used to retrieve a paged set of documents.

### Syntax

<TabItem value="get_interface_paged" label="get_interface_paged">
<CodeBlock language="csharp">
{`public GetDocumentsCommand(int start, int pageSize)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **start** | int | number of documents that should be skipped  |
| **pageSize** | int | maximum number of documents that will be retrieved |

### Example

<TabItem value="get_sample_paged" label="get_sample_paged">
<CodeBlock language="csharp">
{`var command = new GetDocumentsCommand(start: 0, pageSize: 128);
session.Advanced.RequestExecutor.Execute(command, session.Advanced.Context);
var firstDocs = command.Result.Results;
`}
</CodeBlock>
</TabItem>



## Get by starts with

**GetDocumentsCommand** can be used to retrieve multiple documents for a specified ID prefix.

### Syntax

<TabItem value="get_interface_startswith" label="get_interface_startswith">
<CodeBlock language="csharp">
{`public GetDocumentsCommand(string startWith, string startAfter, string matches, string exclude, int start, int pageSize, bool metadataOnly)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **startsWith** | string | prefix for which documents should be returned |
| **startAfter** | string | skip 'document fetching' until the given ID is found, and return documents after that ID (default: null) |
| **matches** | string | pipe ('&#124;') separated values for which document IDs (after 'startsWith') should be matched ('?' any single character, '*' any characters) |
| **exclude** | string | pipe ('&#124;') separated values for which document IDs (after 'startsWith') should **not** be matched ('?' any single character, '*' any characters) |
| **start** | int | number of documents that should be skipped |
| **pageSize** | int | maximum number of documents that will be retrieved |
| **metadataOnly** | bool | specifies whether or not only document metadata should be returned |

### Example I

<TabItem value="get_sample_startswith" label="get_sample_startswith">
<CodeBlock language="csharp">
{`// return up to 128 documents with key that starts with 'products'
var command = new GetDocumentsCommand(
    startWith: "products",
    startAfter: null,
    matches: null,
    exclude: null,
    start: 0,
    pageSize: 128,
    metadataOnly: false);
session.Advanced.RequestExecutor.Execute(command, session.Advanced.Context);
var products = command.Result.Results;
`}
</CodeBlock>
</TabItem>

### Example II

<TabItem value="get_sample_startswith_matches" label="get_sample_startswith_matches">
<CodeBlock language="csharp">
{`// return up to 128 documents with key that starts with 'products/' 
// and rest of the key begins with "1" or "2" e.g. products/10, products/25
var command = new GetDocumentsCommand(
    startWith: "products",
    startAfter: null,
    matches: "1*|2*",
    exclude: null,
    start: 0,
    pageSize: 128,
    metadataOnly: false);
session.Advanced.RequestExecutor.Execute(command, session.Advanced.Context);
var products = command.Result.Results;
`}
</CodeBlock>
</TabItem>

### Example III

<TabItem value="get_sample_startswith_matches_end" label="get_sample_startswith_matches_end">
<CodeBlock language="csharp">
{`// return up to 128 documents with key that starts with 'products/' 
// and rest of the key have length of 3, begins and ends with "1" 
// and contains any character at 2nd position e.g. products/101, products/1B1
var command = new GetDocumentsCommand(
    startWith: "products",
    startAfter: null,
    matches: "1?1",
    exclude: null,
    start: 0,
    pageSize: 128,
    metadataOnly: false);
session.Advanced.RequestExecutor.Execute(command, session.Advanced.Context);
var products = command.Result.Results;
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="java">


There are a few methods that allow you to retrieve documents from a database:   

- [Get single document](../../../client-api/commands/documents/get.mdx#get-single-document)   
- [Get multiple documents](../../../client-api/commands/documents/get.mdx#get-multiple-documents)   
- [Get paged documents](../../../client-api/commands/documents/get.mdx#get-paged-documents)   
- [Get documents by starts with](../../../client-api/commands/documents/get.mdx#get-by-starts-with)  

## Get single document

**GetDocumentsCommand** can be used to retrieve a single document

### Syntax

<TabItem value="get_interface_single" label="get_interface_single">
<CodeBlock language="java">
{`public GetDocumentsCommand(String id, String[] includes, boolean metadataOnly)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **id** | String | ID of the documents to get |
| **includes** | String[] | Related documents to fetch along with the document |
| **metadataOnly** | boolean | Whether to fetch the whole document or just the metadata. |

### Example

<TabItem value="get_sample_single" label="get_sample_single">
<CodeBlock language="java">
{`GetDocumentsCommand command = new GetDocumentsCommand(
    "orders/1-A", null, false);
session.advanced().getRequestExecutor().execute(command);
ObjectNode order = (ObjectNode) command.getResult().getResults().get(0);
`}
</CodeBlock>
</TabItem>



## Get multiple documents

**GetDocumentsCommand** can also be used to retrieve a list of documents.

### Syntax

<TabItem value="get_interface_multiple" label="get_interface_multiple">
<CodeBlock language="java">
{`public GetDocumentsCommand(String[] ids, String[] includes, boolean metadataOnly)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **ids** | String[] | IDs of the documents to get |
| **includes** | String | Related documents to fetch along with the documents |
| **metadataOnly** | boolean | Whether to fetch whole documents or just the metadata |

### Example I

<TabItem value="get_sample_multiple" label="get_sample_multiple">
<CodeBlock language="java">
{`GetDocumentsCommand command = new GetDocumentsCommand(
    new String[]\{"orders/1-A", "employees/3-A"\}, null, false);
session.advanced().getRequestExecutor().execute(command);
ObjectNode order = (ObjectNode) command.getResult().getResults().get(0);
ObjectNode employee = (ObjectNode) command.getResult().getResults().get(1);
`}
</CodeBlock>
</TabItem>

### Example II - Using Includes

<TabItem value="get_sample_includes" label="get_sample_includes">
<CodeBlock language="java">
{`// Fetch emploees/5-A and his boss.
GetDocumentsCommand command = new GetDocumentsCommand(
    "employees/5-A", new String[]\{"ReportsTo"\}, false);
session.advanced().getRequestExecutor().execute(command);

ObjectNode employee = (ObjectNode) command.getResult().getResults().get(0);
String bossId = employee.get("ReportsTo").asText();
ObjectNode boss = (ObjectNode) command.getResult().getIncludes().get(bossId);
`}
</CodeBlock>
</TabItem>

### Example III - Missing Documents

<TabItem value="get_sample_missing" label="get_sample_missing">
<CodeBlock language="java">
{`// Assuming that products/9999-A doesn't exist.
GetDocumentsCommand command = new GetDocumentsCommand(
    new String[]\{"products/1-A", "products/9999-A", "products/3-A"\}, null, false);
session.advanced().getRequestExecutor().execute(command);
ArrayNode products = command.getResult().getResults(); // products/1-A, null, products/3-A
`}
</CodeBlock>
</TabItem>



## Get paged documents

**GetDocumentsCommand** can also be used to retrieve a paged set of documents.

### Syntax

<TabItem value="get_interface_paged" label="get_interface_paged">
<CodeBlock language="java">
{`public GetDocumentsCommand(int start, int pageSize)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **start** | int | number of documents that should be skipped  |
| **pageSize** | int | maximum number of documents that will be retrieved |

### Example

<TabItem value="get_sample_paged" label="get_sample_paged">
<CodeBlock language="java">
{`GetDocumentsCommand command = new GetDocumentsCommand(0, 128);
session.advanced().getRequestExecutor().execute(command);
ArrayNode firstDocs = command.getResult().getResults();
`}
</CodeBlock>
</TabItem>



## Get by starts with

**GetDocumentsCommand** can be used to retrieve multiple documents for a specified ID prefix.

### Syntax

<TabItem value="get_interface_startswith" label="get_interface_startswith">
<CodeBlock language="java">
{`public GetDocumentsCommand(
    String startWith,
    String startAfter,
    String matches,
    String exclude,
    int start,
    int pageSize,
    boolean metadataOnly)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **startsWith** | String | prefix for which documents should be returned |
| **startAfter** | String | skip 'document fetching' until the given ID is found, and return documents after that ID (default: null) |
| **matches** | String | pipe ('&#124;') separated values for which document IDs (after 'startsWith') should be matched ('?' any single character, '*' any characters) |
| **exclude** | String | pipe ('&#124;') separated values for which document IDs (after 'startsWith') should **not** be matched ('?' any single character, '*' any characters) |
| **start** | int | number of documents that should be skipped |
| **pageSize** | int | maximum number of documents that will be retrieved |
| **metadataOnly** | boolean | specifies whether or not only document metadata should be returned |

### Example I

<TabItem value="get_sample_startswith" label="get_sample_startswith">
<CodeBlock language="java">
{`GetDocumentsCommand command = new GetDocumentsCommand(
    "products",  //startWith
    null, //startAfter
    null, // matches
    null, //exclude
    0, // start
    128, // pageSize
    false //metadataOnly
);

session.advanced().getRequestExecutor().execute(command);
ArrayNode products = command.getResult().getResults();
`}
</CodeBlock>
</TabItem>

### Example II

<TabItem value="get_sample_startswith_matches" label="get_sample_startswith_matches">
<CodeBlock language="java">
{`// return up to 128 documents  with key that starts with 'products/'
// and rest of the key begins with "1" or "2", eg. products/10, products/25
GetDocumentsCommand command = new GetDocumentsCommand(
    "products", //startWith
    null, // startAfter
    "1*|2*", // matches
    null, // exclude
    0, //start
    128, //pageSize
    false); //metadataOnly
`}
</CodeBlock>
</TabItem>

### Example III

<TabItem value="get_sample_startswith_matches_end" label="get_sample_startswith_matches_end">
<CodeBlock language="java">
{`// return up to 128 documents with key that starts with 'products/'
// and rest of the key have length of 3, begins and ends with "1"
// and contains any character at 2nd position e.g. products/101, products/1B1
GetDocumentsCommand command = new GetDocumentsCommand(
    "products", //startWith
    null, // startAfter
    "1?1", // matches
    null, // exclude
    0, //start
    128, //pageSize
    false); //metadataOnly
session.advanced().getRequestExecutor().execute(command);
ArrayNode products = command.getResult().getResults();
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="nodejs">


There are a few methods that allow you to retrieve documents from a database:   

- [Get single document](../../../client-api/commands/documents/get.mdx#get-single-document)   
- [Get multiple documents](../../../client-api/commands/documents/get.mdx#get-multiple-documents)   
- [Get paged documents](../../../client-api/commands/documents/get.mdx#get-paged-documents)   
- [Get documents by starts with](../../../client-api/commands/documents/get.mdx#get-by-starts-with)  

## Get single document

**GetDocumentsCommand** can be used to retrieve a single document

### Syntax

<TabItem value="get_interface_single" label="get_interface_single">
<CodeBlock language="js">
{`new GetDocumentsCommand(\{
    id,
    includes,
    metadataOnly,
    conventions
\});
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **options** | object | |
| &nbsp;&nbsp;*id* | string | ID of the document to get |
| &nbsp;&nbsp;*includes* | string[] | Related documents to fetch along with the document |
| &nbsp;&nbsp;*metadataOnly* | boolean | Whether to fetch the whole document or just the metadata. |
| &nbsp;&nbsp;*conventions* | DocumentConventions | Document conventions |

### Example

<TabItem value="get_sample_single" label="get_sample_single">
<CodeBlock language="js">
{`const command = new GetDocumentsCommand(\{ id: "orders/1-A" \});
await session.advanced.getRequestExecutor().execute(command);
const order = command.result.results[0];
`}
</CodeBlock>
</TabItem>



## Get multiple documents

**GetDocumentsCommand** can also be used to retrieve a list of documents.

### Syntax

<TabItem value="get_interface_multiple" label="get_interface_multiple">
<CodeBlock language="js">
{`new GetDocumentsCommand(\{
    ids,
    includes,
    metadataOnly,
    conventions
\});
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **options** | object | |
| &nbsp;&nbsp;*ids* | string[] | IDs of the documents to get |
| &nbsp;&nbsp;*includes* | string[] | Related documents to fetch along with the documents |
| &nbsp;&nbsp;*metadataOnly* | boolean | Whether to fetch whole documents or just the metadata |
| &nbsp;&nbsp;*conventions* | DocumentConventions | Document conventions |

### Example I

<TabItem value="get_sample_multiple" label="get_sample_multiple">
<CodeBlock language="js">
{`const command = new GetDocumentsCommand(\{
    ids: [ "orders/1-A", "employees/3-A" ]
\});
await session.advanced.getRequestExecutor().execute(command);
const order = command.result.results[0];
const employee = command.result.results[1];
`}
</CodeBlock>
</TabItem>

### Example II - Using Includes

<TabItem value="get_sample_includes" label="get_sample_includes">
<CodeBlock language="js">
{`// Fetch emploees/5-A and his boss.
const command = new GetDocumentsCommand(\{
    id: "employees/5-A", 
    includes: [ "ReportsTo" ]
\});
await session.advanced.getRequestExecutor().execute(command);

const employee = command.result.results[0];
const bossId = employee.ReportsTo;
const boss = command.result.includes[bossId];
`}
</CodeBlock>
</TabItem>

### Example III - Missing Documents

<TabItem value="get_sample_missing" label="get_sample_missing">
<CodeBlock language="js">
{`// Assuming that products/9999-A doesn't exist.
const command = new GetDocumentsCommand(\{
    ids: [ "products/1-A", "products/9999-A", "products/3-A" ]
\});
await session.advanced.getRequestExecutor().execute(command);
const products = command.result.results; // products/1-A, null, products/3-A
`}
</CodeBlock>
</TabItem>



## Get paged documents

**GetDocumentsCommand** can also be used to retrieve a paged set of documents.

### Syntax

<TabItem value="get_interface_paged" label="get_interface_paged">
<CodeBlock language="js">
{`new GetDocumentsCommand(\{
    start,
    pageSize,
    conventions
\});
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **options** | object | |
| &nbsp;&nbsp;*start* | number | number of documents that should be skipped  |
| &nbsp;&nbsp;*pageSize* | number | maximum number of documents that will be retrieved |
| &nbsp;&nbsp;*conventions* | DocumentConventions | Document conventions |

### Example

<TabItem value="get_sample_paged" label="get_sample_paged">
<CodeBlock language="js">
{`const command = new GetDocumentsCommand(\{
    start: 0, 
    pageSize: 128
\});
await session.advanced.getRequestExecutor().execute(command);
const firstDocs = command.result.results;
`}
</CodeBlock>
</TabItem>



## Get by starts with

**GetDocumentsCommand** can be used to retrieve multiple documents for a specified ID prefix.

### Syntax

<TabItem value="get_interface_startswith" label="get_interface_startswith">
<CodeBlock language="js">
{`new GetDocumentsCommand(\{
    start,
    pageSize,
    startsWith,
    startsAfter,
    matches,
    exclude,
    metadataOnly,
    conventions
\});
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **options** | object | |
| &nbsp;&nbsp;*startsWith* | string | prefix for which documents should be returned |
| &nbsp;&nbsp;*startAfter* | string | skip 'document fetching' until the given ID is found, and return documents after that ID (default: null) |
| &nbsp;&nbsp;*matches* | string | pipe ('&#124;') separated values for which document IDs (after 'startsWith') should be matched ('?' any single character, '*' any characters) |
| &nbsp;&nbsp;*exclude* | string | pipe ('&#124;') separated values for which document IDs (after 'startsWith') should **not** be matched ('?' any single character, '*' any characters) |
| &nbsp;&nbsp;*start* | number | number of documents that should be skipped |
| &nbsp;&nbsp;*pageSize* | number | maximum number of documents that will be retrieved |
| &nbsp;&nbsp;*metadataOnly* | boolean | specifies whether or not only document metadata should be returned |
| &nbsp;&nbsp;*conventions* | DocumentConventions | Document conventions |

### Example I

<TabItem value="get_sample_startswith" label="get_sample_startswith">
<CodeBlock language="js">
{`const command = new GetDocumentsCommand(\{
    startsWith: "products",  
    start: 0, 
    pageSize: 128
\});

await session.advanced.getRequestExecutor().execute(command);
const products = command.result.results;
`}
</CodeBlock>
</TabItem>

### Example II

<TabItem value="get_sample_startswith_matches" label="get_sample_startswith_matches">
<CodeBlock language="js">
{`// return up to 128 documents  with key that starts with 'products/'
// and rest of the key begins with "1" or "2", eg. products/10, products/25
const command = new GetDocumentsCommand(\{
    startsWith: "products", 
    matches: "1*|2*", 
    start: 0, 
    pageSize: 128
\});
`}
</CodeBlock>
</TabItem>

### Example III

<TabItem value="get_sample_startswith_matches_end" label="get_sample_startswith_matches_end">
<CodeBlock language="js">
{`// return up to 128 documents with key that starts with 'products/'
// and rest of the key have length of 3, begins and ends with "1"
// and contains any character at 2nd position e.g. products/101, products/1B1
const command = new GetDocumentsCommand(\{
    startsWith: "products",
    matches: "1?1",
    start: 0,
    pageSize: 128
\});
await session.advanced.getRequestExecutor().execute(command);
const products = command.result.results;
`}
</CodeBlock>
</TabItem>




</LanguageContent>

<!---
### Commands
- [Put](../../../client-api/commands/documents/put)
- [Delete](../../../client-api/commands/documents/delete)
- [How to Send Multiple Commands Using a Batch](../../../client-api/commands/batches/how-to-send-multiple-commands-using-a-batch)


-->